--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
   google_fonts: ^8.0.2
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
