--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^8.0.2
   google_sign_in: ^7.2.0
   http: ^1.6.0
+  image_picker: ^1.0.8
+  shared_preferences: ^2.2.2
+
 
 dev_dependencies:
   flutter_test:
